header z-index fix

--- a/source/styles/css/main.css
+++ b/source/styles/css/main.css
@@ -6,7 +6,7 @@
   padding-bottom: 15px; }
   .header .logo {
     position: relative;
-    z-index: 1; }
+    z-index: 5; }
     .header .logo img {
       max-height: 80px; }
       @media (max-width: 991px) {
@@ -86,7 +86,8 @@
         max-height: 100vh !important;
         opacity: 0;
         transition: .2s;
-        padding: 105px 15px 5px; }
+        padding: 80px 15px 5px;
+        z-index: 4; }
         .header .navbar-collapse.show {
           opacity: 1 !important;
           top: 0 !important;
